--- a/src/pages/quiz_en.astro
+++ b/src/pages/quiz_en.astro
@@ -146,7 +146,7 @@ await writeFile(
                       data-card-id={char.card_id}
                     >
                       <img
-                        src={`/images/character_hd/hd_${char.char_id}_${char.card_id}.png`}
+                        src={`${import.meta.env.BASE_URL}/images/character_hd/hd_${char.char_id}_${char.card_id}.png`}
                         alt={char.name_en}
                         class="w-16 h-16 object-cover rounded-lg flex-shrink-0"
                       />
@@ -246,4 +246,4 @@ await writeFile(
   }
 </style>
 
-<script type="module" src="/scripts/quiz.js"></script>
+<script type="module" src={`${import.meta.env.BASE_URL}/scripts/quiz.js`}></script>
