--- a/src/pages/quiz_en.astro
+++ b/src/pages/quiz_en.astro
@@ -64,7 +64,7 @@ uniqueCharacters.forEach((char: any) => {
 // await mkdir(publicDataDir, { recursive: true });
 // await writeFile(
 //   path.join(publicDataDir, "characters-random-en.json"),
-//   JSON.stringify({ characters, uniqueCharacters })
+//   JSON.stringify({ characters, uniqueCharacters })S
 // );
 ---
 
