--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ import Layout from "../layouts/Layout.astro";
             href="/gubuk-trainer/pilih_server_character"
             class="px-10 py-5 bg-white/20 text-[#E7EFC7] border-2 border-[#B6F500] rounded-full font-bold text-2xl hover:bg-[#B6F500] hover:text-[#2D4F2B] hover:shadow-2xl hover:scale-110 transition-all duration-300 inline-block"
           >
-            Daftar Karakter
+            Trivia Karakter
           </a>
         </div>
       </div>
